--- a/src/renderer/index.html
+++ b/src/renderer/index.html
@@ -7,7 +7,11 @@
 </head>
 <body>
 
-  <main id="main"></main>
+  <main>
+    <section class="section">
+      <div id="main" class="container"></div>
+    </section>
+  </main>
 
   <script>
     {
