--- a/src/renderer/index.html
+++ b/src/renderer/index.html
@@ -1,17 +1,17 @@
 <!doctype html>
-<html class="no-js" lang="ja">
+<html lang="en">
 <head>
   <meta charset="utf-8">
   <title>Sample</title>
   <meta name="description" content="">
+
+  <!-- TODO: DELETE -->
+  <link href="https://fonts.googleapis.com/css?family=Droid+Sans|Droid+Sans+Mono|Droid+Serif:400,400i,700,700i|Heebo:400,700|Noto+Sans:400,400i,700,700i|Roboto+Mono:400,400i,700,700i|Roboto:400,400i,700,700i|Source+Sans+Pro:400,400i,700,700i&subset=greek,greek-ext,latin-ext,vietnamese" rel="stylesheet">
+
 </head>
 <body>
 
-  <main>
-    <section class="section">
-      <div id="main" class="container"></div>
-    </section>
-  </main>
+  <div id="app"></div>
 
   <script>
     {
