--- a/src/renderer/index.html
+++ b/src/renderer/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <title>Sample</title>
+  <title></title>
   <meta name="description" content="">
 
   <!-- TODO: DELETE -->
